--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "psycopg2-binary>=2.9.9",
     "python-dotenv>=1.0.0",
     "pydantic>=2.7.0",
-    "requests>=2.31.0"
+    "requests>=2.31.0",
+    "httpx>=0.28.1",
 ]
 
 
